--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="test-color">ABCD</div>
+    <div class="test-color">
+        <div class="center"> ABC </div>
+    </div>
 </body>
 </html>
