--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <div class="test-color">
         <div class="center"> ABC </div>
+        <!-- <a href="https://www.google.com" target="_blank">Link Text</a> -->
+        <iframe title="Link to Google">
+            <a href="https://www.google.com" target="_blank">Link Text</a>
+          </iframe>
+          
+
     </div>
 </body>
-</html>
+</html> 
